# clob-risk-modelling

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notes/oi_risk/: 01_oi_risk_preliminaries  01_oi_risk_preliminaries.ipynb  02_price_band_analysis_executed.ipynb  02_price_band_and_order_flow.ipynb  03_oi_limits_and_integrated_framework.ipynb
notes/oi_risk/.ipynb_checkpoints/: 01_data_and_market_characterization-checkpoint.ipynb  01_data_and_market_characterization_executed-checkpoint.ipynb  02_price_band_and_order_flow-checkpoint.ipynb  03_oi_limits_and_integrated_framework-checkpoint.ipynb
script/: binance_crawl.py  extended_crawl.py
src/: README.md  __init__.py  liquidity_metrics.py
